--- a/SparseWeights_CVXOPT-test - cheburashka - WITH - spatial_term.ipynb
+++ b/SparseWeights_CVXOPT-test - cheburashka - WITH - spatial_term.ipynb
@@ -260,7 +260,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print (res.sum(axis=0))\n",
+    "print (res.T.dot(Vertices))\n",
+    "\n",
+    "res2=res.clip(0,1) ### this is important, when estimate handle position later.\n",
+    "print (((1-res2.sum(axis=-1))**2).sum()/len(res2))\n",
+    "\n",
+    "print (res2.sum(axis=0))\n",
+    "print (res2.T.dot(Vertices))"
+   ]
   },
   {
    "cell_type": "code",
@@ -271,19 +280,19 @@
     "### plot handles corresponding to gt mixing weights, recovered mixing weights, and post-processed mixing weights.\n",
     "###\n",
     "\n",
-    "eps=1e-10\n",
+    "eps=1e-30\n",
     "\n",
-    "# Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
     "\n",
-    "## use recovered vertices instead.\n",
-    "recovered_vertices2=recover_vertices(res, vertices1, endmembers).reshape((len(vertices1),-1))\n",
-    "Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "# ## use recovered vertices instead.\n",
+    "# recovered_vertices2=recover_vertices(res2, vertices1, endmembers).reshape((len(vertices1),-1))\n",
+    "# Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n",
     "\n",
     "\n",
     "gt_handle_position=gt_mixing_weights.T.dot(Vertices)/(gt_mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "recovered_handle_position=mixing_weights.T.dot(Vertices)/(mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "cliped_handle_position=mixing_weights_clip.T.dot(Vertices)/(mixing_weights_clip.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
-    "postprocessed_handle_position=res.T.dot(Vertices)/(res.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "postprocessed_handle_position=res2.T.dot(Vertices)/(res2.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "\n",
     "\n",
     "%matplotlib \n",
