--- a/SparseWeights_CVXOPT-test - cheburashka.ipynb
+++ b/SparseWeights_CVXOPT-test - cheburashka.ipynb
@@ -239,7 +239,7 @@
       "46:  1.7736e+06  1.7736e+06  5e-02  1e-11  1e-14\n",
       "Optimal solution found.\n",
       "optimal\n",
-      "using time:  313.93640899658203\n",
+      "using time:  536.8431499004364\n",
       "2964.0456104602504\n"
      ]
     }
@@ -459,28 +459,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "\n",
+    "# ## use recovered vertices instead.\n",
+    "# recovered_vertices2=recover_vertices(res2, vertices1, endmembers).reshape((len(vertices1),-1))\n",
+    "# Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:12: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  if sys.path[0] == '':\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ 510.30639654  900.94359645 1236.87183864 3881.73763017   -0.00000003\n",
+      "   46.55706322    3.92935072   75.16731218   13.48681209    0.00000006\n",
+      "   -0.00000003]\n",
+      "[[ 302.35127973  302.51983013  272.23195734]\n",
+      " [ 423.26664495  305.3494635   456.1709636 ]\n",
+      " [ 479.12653169  469.1517114   632.47124279]\n",
+      " [2052.16423308 2309.31515058 1941.70806809]\n",
+      " [  -0.00000002   -0.00000002   -0.00000002]\n",
+      " [  21.694652     20.42466839   25.23357401]\n",
+      " [   1.83100979    0.70225373    2.08928039]\n",
+      " [  30.0842348    29.80691234   38.14404296]\n",
+      " [   8.8419219     6.73663773    6.06441693]\n",
+      " [   0.00000003    0.00000004    0.00000003]\n",
+      " [  -0.00000002   -0.00000002   -0.00000002]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (res.sum(axis=0))\n",
+    "print (res.T.dot(Vertices))\n",
+    "\n",
+    "res2=res ### seems for cheburashka example, do not clip is better?\n",
+    "\n",
+    "# res2=res.clip(0,1) ### this is important, when estimate handle position later.\n",
+    "# print (((1-res2.sum(axis=-1))**2).sum()/len(res2))\n",
+    "\n",
+    "# print (res2.sum(axis=0))\n",
+    "# print (res2.T.dot(Vertices))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.59248969 0.59281998 0.53346766]\n",
+      " [0.46980371 0.33892184 0.50632577]\n",
+      " [0.38736959 0.37930503 0.51134744]\n",
+      " [0.52867155 0.59491789 0.50021621]\n",
+      " [0.49590905 0.50823845 0.50626187]\n",
+      " [0.46597982 0.43870182 0.54199239]\n",
+      " [0.46598279 0.17872004 0.53171135]\n",
+      " [0.40023029 0.39654088 0.50745519]\n",
+      " [0.65559762 0.49949815 0.44965533]\n",
+      " [0.52889088 0.62805385 0.49621531]\n",
+      " [0.49552674 0.5163536  0.50640675]]\n",
       "Using matplotlib backend: MacOSX\n"
      ]
     }
@@ -489,20 +537,13 @@
     "### plot handles corresponding to gt mixing weights, recovered mixing weights, and post-processed mixing weights.\n",
     "###\n",
     "\n",
-    "eps=1e-10\n",
-    "\n",
-    "# Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
-    "\n",
-    "## use recovered vertices instead.\n",
-    "recovered_vertices2=recover_vertices(res, vertices1, endmembers).reshape((len(vertices1),-1))\n",
-    "Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n",
-    "\n",
+    "eps=1e-30\n",
     "\n",
     "gt_handle_position=gt_mixing_weights.T.dot(Vertices)/(gt_mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "recovered_handle_position=mixing_weights.T.dot(Vertices)/(mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "cliped_handle_position=mixing_weights_clip.T.dot(Vertices)/(mixing_weights_clip.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
-    "postprocessed_handle_position=res.T.dot(Vertices)/(res.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
-    "\n",
+    "postprocessed_handle_position=res2.T.dot(Vertices)/(res2.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "print (postprocessed_handle_position)\n",
     "\n",
     "%matplotlib \n",
     "import matplotlib.pyplot as plt\n",
