--- a/SparseWeights_CVXOPT-test - cow.ipynb
+++ b/SparseWeights_CVXOPT-test - cow.ipynb
@@ -152,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "708.6870049193496\n"
+      "708.6870049193498\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.07533573276941448\n"
+      "0.07533573276941447\n"
      ]
     }
    ],
@@ -181,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37144.77739542565\n",
+      "37144.77739542564\n",
       "(174990, 1)\n",
       "(11666, 28)\n",
       "(11666, 21)\n",
@@ -238,7 +238,68 @@
       "40: -9.8329e+07 -9.5192e+07  3e+06  5e-03  8e-14\n",
       "41: -9.7945e+07 -9.4870e+07  3e+06  4e-03  8e-14\n",
       "42: -9.7648e+07 -9.4630e+07  3e+06  4e-03  8e-14\n",
-      "43: -9.7420e+07 -9.4441e+07  3e+06  4e-03  8e-14\n"
+      "43: -9.7420e+07 -9.4441e+07  3e+06  4e-03  8e-14\n",
+      "44: -9.7226e+07 -9.4257e+07  3e+06  4e-03  7e-14\n",
+      "45: -9.6712e+07 -9.3697e+07  4e+06  3e-03  7e-14\n",
+      "46: -9.6454e+07 -9.3267e+07  4e+06  3e-03  7e-14\n",
+      "47: -9.5800e+07 -9.2199e+07  4e+06  3e-03  6e-14\n",
+      "48: -9.5457e+07 -9.1542e+07  4e+06  2e-03  6e-14\n",
+      "49: -9.4894e+07 -9.0313e+07  4e+06  2e-03  6e-14\n",
+      "50: -9.4369e+07 -8.7761e+07  5e+06  2e-03  6e-14\n",
+      "51: -9.4201e+07 -8.4428e+07  5e+06  2e-03  6e-14\n",
+      "52: -9.4092e+07 -7.8057e+07  6e+06  2e-03  6e-14\n",
+      "53: -9.4003e+07 -6.9929e+07  7e+06  2e-03  6e-14\n",
+      "54: -9.3994e+07 -6.8619e+07  7e+06  2e-03  6e-14\n",
+      "55: -9.3908e+07 -5.9555e+07  8e+06  2e-03  6e-14\n",
+      "56: -9.3901e+07 -5.8142e+07  8e+06  2e-03  6e-14\n",
+      "57: -9.3811e+07 -4.9172e+07  1e+07  2e-03  6e-14\n",
+      "58: -9.3711e+07 -3.9408e+07  1e+07  2e-03  6e-14\n",
+      "59: -9.3494e+07 -1.4141e+07  1e+07  2e-03  7e-14\n",
+      "60: -9.3380e+07  2.5239e+07  2e+07  2e-03  7e-14\n",
+      "61: -9.2896e+07  7.5467e+07  2e+07  2e-03  7e-14\n",
+      "62: -9.2604e+07  1.0254e+08  3e+07  2e-03  7e-14\n",
+      "63: -9.1155e+07  2.0350e+08  4e+07  2e-03  7e-14\n",
+      "64: -9.1069e+07  2.0942e+08  4e+07  2e-03  7e-14\n",
+      "65: -9.0104e+07  2.7546e+08  5e+07  2e-03  7e-14\n",
+      "66: -8.8322e+07  3.7746e+08  6e+07  2e-03  7e-14\n",
+      "67: -8.6593e+07  4.5438e+08  7e+07  2e-03  7e-14\n",
+      "68: -8.6138e+07  4.7544e+08  7e+07  2e-03  7e-14\n",
+      "69: -8.4865e+07  5.6940e+08  8e+07  2e-03  7e-14\n",
+      "70: -8.5567e+07  8.6077e+08  1e+08  2e-03  7e-14\n",
+      "71: -8.4654e+07  9.5376e+08  1e+08  2e-03  8e-14\n",
+      "72: -8.2972e+07  1.1182e+09  1e+08  2e-03  8e-14\n",
+      "73: -7.3013e+07  1.8300e+09  2e+08  2e-03  8e-14\n",
+      "74: -6.7060e+07  2.2145e+09  3e+08  2e-03  8e-14\n",
+      "75: -5.8524e+07  2.8216e+09  3e+08  2e-03  8e-14\n",
+      "76: -5.3694e+07  3.4330e+09  4e+08  2e-03  8e-14\n",
+      "77: -4.4785e+07  4.1697e+09  5e+08  2e-03  9e-14\n",
+      "78: -2.9847e+07  5.2227e+09  6e+08  2e-03  9e-14\n",
+      "79: -4.4046e+06  6.6653e+09  7e+08  2e-03  9e-14\n",
+      "80:  3.8417e+07  8.7623e+09  1e+09  2e-03  9e-14\n",
+      "81:  1.0092e+08  1.1045e+10  1e+09  2e-03  9e-14\n",
+      "82:  1.8769e+08  1.3573e+10  2e+09  2e-03  9e-14\n",
+      "83:  3.5401e+08  1.7407e+10  2e+09  2e-03  9e-14\n",
+      "84:  4.3688e+08  1.9110e+10  2e+09  2e-03  9e-14\n",
+      "85:  4.2882e+08  2.0358e+10  2e+09  2e-03  9e-14\n",
+      "86:  6.1122e+08  2.4460e+10  3e+09  2e-03  9e-14\n",
+      "87:  7.7593e+08  2.7650e+10  3e+09  2e-03  9e-14\n",
+      "88:  1.0527e+09  3.2338e+10  4e+09  2e-03  9e-14\n",
+      "89:  1.0603e+09  3.2457e+10  4e+09  2e-03  9e-14\n",
+      "90:  1.5337e+09  3.9059e+10  5e+09  2e-03  9e-14\n",
+      "91:  2.6606e+09  5.1232e+10  7e+09  2e-03  1e-13\n",
+      "92:  3.2619e+09  5.7148e+10  9e+09  2e-03  1e-13\n",
+      "93:  4.2360e+09  6.7421e+10  1e+10  2e-03  1e-13\n",
+      "94:  5.0597e+09  7.7411e+10  1e+10  2e-03  1e-13\n",
+      "95:  7.9857e+09  1.0535e+11  2e+10  1e-03  1e-13\n",
+      "96:  1.2259e+10  1.3421e+11  2e+10  1e-03  1e-13\n",
+      "97:  1.3302e+10  1.4336e+11  3e+10  1e-03  1e-13\n",
+      "98:  1.6837e+10  1.6221e+11  3e+10  1e-03  1e-13\n",
+      "99:  3.7988e+10  2.3881e+11  5e+10  1e-03  9e-14\n",
+      "100:  1.4497e+11  4.0358e+11  1e+11  9e-04  7e-14\n",
+      "Terminated (maximum number of iterations reached).\n",
+      "Solution status not optimal: unknown\n",
+      "using time:  3373.7928009033203\n",
+      "18538.333347374723\n"
      ]
     }
    ],
@@ -263,9 +324,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.0488357  -0.00025218 -0.00049711  0.85894611 -0.00042451 -0.00019948\n",
+      "   0.00003066  0.00020723 -0.00053548  0.00069607  0.00026473  0.04839043\n",
+      "  -0.00035479  0.04373759  0.00115504]\n",
+      " [ 0.04865433 -0.00023534 -0.00048779  0.85893776 -0.00040002 -0.00022618\n",
+      "  -0.00009843  0.00020417 -0.00054918  0.00069575  0.00035076  0.0485271\n",
+      "  -0.00032414  0.04379297  0.00115825]\n",
+      " [ 0.04856603 -0.00030226 -0.00046907  0.858842   -0.00040621 -0.00025675\n",
+      "  -0.00015609  0.0002012  -0.00055037  0.00069594  0.00048723  0.04853769\n",
+      "  -0.00031577  0.04394801  0.00117843]]\n",
+      "1.5993784074908035e-10\n",
+      "0.0043737005785695355\n"
+     ]
+    }
+   ],
    "source": [
     "print (res.reshape((-1, len(endmembers)))[:3]) ### should have same zeros as initial input.\n",
     "print ((col_major(res)[grad_zero_indices]).sum()) ### should be zero\n",
@@ -274,9 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.783510782681785e-27\n",
+      "-0.0006422016771267755 0.9115699649712768\n"
+     ]
+    }
+   ],
    "source": [
     "print (((1-res.sum(axis=-1))**2).sum()/len(res))\n",
     "print (res.min(), res.max())"
@@ -284,9 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15196379513975.172\n"
+     ]
+    }
+   ],
    "source": [
     "recover_diff= (res.dot(endmembers)-mixing_weights.dot(endmembers))\n",
     "recover_diff= (recover_diff**2).sum()\n",
@@ -295,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,9 +415,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['./models/cow-all/cow.DMAT']\n",
+      "(11666, 15)\n",
+      "1.5653958587979453e-28\n"
+     ]
+    }
+   ],
    "source": [
     "#### read gt per vertex mixing weights \n",
     "groundtruth_names=glob.glob(\"./models/\"+exampleName+\"-all/\"+exampleName+\".DMAT\")\n",
@@ -335,9 +441,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['./models/cow-all/poses-2/cow-1.Tmat', './models/cow-all/poses-2/cow-2.Tmat', './models/cow-all/poses-2/cow-3.Tmat', './models/cow-all/poses-2/cow-4.Tmat', './models/cow-all/poses-2/cow-5.Tmat', './models/cow-all/poses-2/cow-6.Tmat', './models/cow-all/poses-2/cow-7.Tmat']\n",
+      "(15, 84)\n",
+      "(7, 15, 12)\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]]\n",
+      "[[ 0.998956    0.0322376   0.0323555  -2.24837   ]\n",
+      " [-0.0456047   0.664913    0.745527   27.1422    ]\n",
+      " [ 0.00252045 -0.746225    0.665689   53.4901    ]]\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]]\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]]\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]]\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]]\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]]\n",
+      "[[ 0.99999923 -0.00000004  0.00000002]\n",
+      " [-0.00000004  1.00000031 -0.00000012]\n",
+      " [ 0.00000002 -0.00000012  0.99999923]]\n"
+     ]
+    }
+   ],
    "source": [
     "### load groundtruth endmember\n",
     "groundtruth_names=glob.glob(\"./models/\"+exampleName+\"-all/\"+poses_folder+\"/\"+exampleName+\"-*.Tmat\")\n",
@@ -369,33 +509,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "\n",
+    "# ## use recovered vertices instead.\n",
+    "# recovered_vertices2=recover_vertices(res2, vertices1, endmembers).reshape((len(vertices1),-1))\n",
+    "# Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 670.2643694     0.63173762  739.75593732 9028.50360065   -3.90749162\n",
+      "   -1.82023661    0.02634296    2.62539863   47.93159462    7.76160885\n",
+      "   -2.70231202  589.26563627   -1.24419999  576.75633724   12.15167668]\n",
+      "[[   429.31993538  41632.21672683   1243.43819773]\n",
+      " [   -20.95998059     67.33280044    -77.56001653]\n",
+      " [-10557.87209067  14124.5383032      72.48711148]\n",
+      " [  6052.54305156 592211.38706927 -90829.74717631]\n",
+      " [     0.1390201    -241.36407584     42.7872104 ]\n",
+      " [    -5.69374269   -122.67365614     -9.58808229]\n",
+      " [    -6.72099491     11.44466598    -65.62574157]\n",
+      " [     3.33893239    138.90677982    -61.80645541]\n",
+      " [  -850.6024355     934.90011938   -281.03714754]\n",
+      " [    -2.73310973    488.27817857    -69.55625511]\n",
+      " [    21.57659549   -200.60490267    115.61099265]\n",
+      " [   779.60046416  38080.0898607    -937.02832599]\n",
+      " [    15.83802352    -64.55801391    134.19549983]\n",
+      " [   142.21781297  35592.92299028  -1954.2862935 ]\n",
+      " [    -7.57219066    760.75110214    -92.72084039]]\n",
+      "5.801283923072726e-06\n",
+      "[ 670.31686627    2.30990413  745.20796519 9029.10352366    0.00668651\n",
+      "    0.03896628    1.47762904    2.62807882   53.76175071    7.83785233\n",
+      "    0.8569483   589.72434434    1.55797296  576.79497586   12.19614884]\n",
+      "[[   428.6556259   41636.30200155   1242.17347211]\n",
+      " [   -13.99440167    170.25406167    -58.57134641]\n",
+      " [-10557.61830112  14489.25062224     37.15905944]\n",
+      " [  6046.25261573 592227.14926487 -90822.54736768]\n",
+      " [    -0.11496025      0.54148765      0.31500286]\n",
+      " [    -0.85303987      0.412374       -3.79591681]\n",
+      " [    -1.73124594     82.98725695    -93.17732688]\n",
+      " [     3.31781812    139.08608408    -61.72620569]\n",
+      " [  -843.80860455   1315.76080771   -328.74790751]\n",
+      " [    -2.37504117    492.90552199    -65.51919303]\n",
+      " [     6.37409883     38.15063615     25.17325626]\n",
+      " [   772.52618447  38088.11473025   -936.10512052]\n",
+      " [     8.84969282    110.62766717     73.92835708]\n",
+      " [   142.1192642   35596.00073435  -1955.49731351]\n",
+      " [    -7.41027126    763.48376013    -90.34329792]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (res.sum(axis=0))\n",
+    "print (res.T.dot(Vertices))\n",
+    "\n",
+    "res2=res\n",
+    "res2=res.clip(0,1) ### this is important, when estimate handle position later.\n",
+    "print (((1-res2.sum(axis=-1))**2).sum()/len(res2))\n",
+    "\n",
+    "print (res2.sum(axis=0))\n",
+    "print (res2.T.dot(Vertices))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: MacOSX\n"
+     ]
+    }
+   ],
    "source": [
     "### plot handles corresponding to gt mixing weights, recovered mixing weights, and post-processed mixing weights.\n",
     "###\n",
     "\n",
-    "eps=1e-10\n",
-    "\n",
-    "# Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
-    "\n",
-    "## use recovered vertices instead.\n",
-    "recovered_vertices2=recover_vertices(res, vertices1, endmembers).reshape((len(vertices1),-1))\n",
-    "Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n",
-    "\n",
+    "eps=1e-30\n",
     "\n",
     "gt_handle_position=gt_mixing_weights.T.dot(Vertices)/(gt_mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "recovered_handle_position=mixing_weights.T.dot(Vertices)/(mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "cliped_handle_position=mixing_weights_clip.T.dot(Vertices)/(mixing_weights_clip.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
-    "postprocessed_handle_position=res.T.dot(Vertices)/(res.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "postprocessed_handle_position=res2.T.dot(Vertices)/(res2.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "\n",
     "\n",
     "%matplotlib \n",
