--- a/SparseWeights_CVXOPT-test - wolf.ipynb
+++ b/SparseWeights_CVXOPT-test - wolf.ipynb
@@ -56,7 +56,9 @@
      "text": [
       "['./models/wolf-all/poses-1/wolf-1.obj', './models/wolf-all/poses-1/wolf-2.obj', './models/wolf-all/poses-1/wolf-3.obj', './models/wolf-all/poses-1/wolf-4.obj', './models/wolf-all/poses-1/wolf-5.obj', './models/wolf-all/poses-1/wolf-6.obj']\n",
       "(5075, 24)\n",
-      "(5075, 18)\n"
+      "(5075, 18)\n",
+      "3.96582\n",
+      "4.370884\n"
      ]
     }
    ],
@@ -83,7 +85,9 @@
     "    vertices1=np.hstack((vertices1, vertices1_temp))\n",
     "    vertices2=np.hstack((vertices2, np.asarray(mesh1_list[i].vs)))\n",
     "print(vertices1.shape) \n",
-    "print(vertices2.shape) \n"
+    "print(vertices2.shape) \n",
+    "print (vertices1.max())\n",
+    "print (vertices2.max())"
    ]
   },
   {
@@ -304,7 +308,7 @@
       "100: -2.3950e+06 -2.3272e+06  2e+05  1e-05  6e-16\n",
       "Terminated (maximum number of iterations reached).\n",
       "Solution status not optimal: unknown\n",
-      "using time:  1581.1055591106415\n",
+      "using time:  1413.2201972007751\n",
       "1759.1513899239992\n"
      ]
     }
@@ -515,14 +519,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.370884\n"
+     ]
+    }
+   ],
+   "source": [
+    "Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "print (Vertices.max()) \n",
+    "\n",
+    "# ## use recovered vertices instead.\n",
+    "# recovered_vertices2=recover_vertices(res2, vertices1, endmembers).reshape((len(vertices1),-1))\n",
+    "# Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "# print (Vertices.max())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 399.70266664   -0.00041991   -0.02923862    0.16649313   -0.00912705\n",
+      "    3.1589214    51.25249411 2797.257224      5.50631399    0.02168104\n",
+      "    0.02370989   86.18054897  177.36154809   -0.00065255    0.0154301\n",
+      "    0.13063341    2.12354194   -0.01069692    0.02345635    0.01161672\n",
+      " 1552.11385527]\n",
+      "[[  -14.0423573   -356.95206278   156.93411467]\n",
+      " [    0.00044973     0.00124958    -0.01001083]\n",
+      " [   -0.0005174      0.01582221    -0.03430299]\n",
+      " [    0.06111687    -0.25238096    -0.22479683]\n",
+      " [    0.00580065    -0.00480058    -0.0447732 ]\n",
+      " [    0.79653867    -0.91486012    -5.24381471]\n",
+      " [   18.44563958   -12.88691867     8.89574168]\n",
+      " [   42.17259515 -2706.05067188  2491.25205974]\n",
+      " [   -0.81203279    -6.03048388    -4.87214842]\n",
+      " [   -0.03514608    -0.03809853    -0.1029708 ]\n",
+      " [   -0.00107027     0.00089884    -0.15667558]\n",
+      " [   -0.93335686   -21.38983367   128.38042998]\n",
+      " [  -11.54112284  -146.69376267    79.06101524]\n",
+      " [   -0.00000058    -0.00033275    -0.0013612 ]\n",
+      " [   -0.00092197    -0.02614006     0.00315089]\n",
+      " [    0.00030954    -0.0104792      0.2234509 ]\n",
+      " [   -0.26998178    -3.1130562     -2.84084634]\n",
+      " [    0.0098885     -0.01011277    -0.04929452]\n",
+      " [    0.00238538     0.01927675     0.05617764]\n",
+      " [    0.00053084    -0.01742849    -0.00370331]\n",
+      " [   63.15356071   477.84980369  3059.62076327]]\n",
+      "[[-0.03513201 -0.89304399  0.39262714]\n",
+      " [-1.0710226  -2.97585264 23.84066523]\n",
+      " [ 0.0176957  -0.54114077  1.17320838]\n",
+      " [ 0.36708345 -1.51586412 -1.3501868 ]\n",
+      " [-0.63554475  0.52597235  4.90554978]\n",
+      " [ 0.25215527 -0.28961155 -1.66000164]\n",
+      " [ 0.3598974  -0.25143984  0.173567  ]\n",
+      " [ 0.01507641 -0.96739429  0.89060528]\n",
+      " [-0.14747303 -1.09519433 -0.88482939]\n",
+      " [-1.62105175 -1.75722824 -4.74934859]\n",
+      " [-0.0451404   0.03790983 -6.60802493]\n",
+      " [-0.01083025 -0.24819793  1.48966828]\n",
+      " [-0.06507117 -0.82708887  0.44576187]\n",
+      " [ 0.00088408  0.50992743  2.08598297]\n",
+      " [-0.05975117 -1.69409543  0.20420417]\n",
+      " [ 0.00236955 -0.08021841  1.71051878]\n",
+      " [-0.12713748 -1.4659735  -1.33778678]\n",
+      " [-0.92442489  0.9453913   4.60829234]\n",
+      " [ 0.10169439  0.82181395  2.3949869 ]\n",
+      " [ 0.04569649 -1.50029424 -0.31879171]\n",
+      " [ 0.04068874  0.30787033  1.97126052]]\n",
+      "4.219555006760579e-09\n",
+      "[ 399.70338725    0.00803336    0.00003891    0.19533712    0.01274776\n",
+      "    3.18806691   51.28104616 2797.25800264    5.53564349    0.04449587\n",
+      "    0.05306174   86.19035326  177.3805813     0.00045693    0.01790835\n",
+      "    0.13143066    2.15300511    0.01791231    0.0262005     0.01698001\n",
+      " 1552.11419929]\n",
+      "[[  -14.04206981  -356.95278852   156.93480405]\n",
+      " [    0.00046917    -0.00867997    -0.00127134]\n",
+      " [    0.0000294     -0.0000608     -0.00003891]\n",
+      " [    0.06172316    -0.26983883    -0.19252789]\n",
+      " [    0.00530947    -0.01494305    -0.01093181]\n",
+      " [    0.79705958    -0.93071953    -5.20897227]\n",
+      " [   18.44600732   -12.90275499     8.9298638 ]\n",
+      " [   42.17289717 -2706.05090429  2491.25168541]\n",
+      " [   -0.81144926    -6.04651453    -4.83789938]\n",
+      " [   -0.03474734    -0.05329261    -0.08132706]\n",
+      " [   -0.00052935    -0.01496359    -0.12218526]\n",
+      " [   -0.93382212   -21.40152986   128.38226365]\n",
+      " [  -11.54043773  -146.69771013    79.09251885]\n",
+      " [    0.00001875    -0.00046634    -0.00003225]\n",
+      " [   -0.00066036    -0.02545841     0.00805778]\n",
+      " [    0.00030001    -0.01128018     0.22273804]\n",
+      " [   -0.26942637    -3.1290667     -2.80637578]\n",
+      " [    0.01044586    -0.02656788    -0.01664033]\n",
+      " [    0.0015185      0.01495286     0.05678317]\n",
+      " [    0.00096705    -0.01740373     0.00479261]\n",
+      " [   63.15354059   477.84967962  3059.62082647]]\n",
+      "[[-0.03513201 -0.89304399  0.39262714]\n",
+      " [-1.0710226  -2.97585264 23.84066523]\n",
+      " [ 0.0176957  -0.54114077  1.17320838]\n",
+      " [ 0.36708345 -1.51586412 -1.3501868 ]\n",
+      " [-0.63554475  0.52597235  4.90554978]\n",
+      " [ 0.25215527 -0.28961155 -1.66000164]\n",
+      " [ 0.3598974  -0.25143984  0.173567  ]\n",
+      " [ 0.01507641 -0.96739429  0.89060528]\n",
+      " [-0.14747303 -1.09519433 -0.88482939]\n",
+      " [-1.62105175 -1.75722824 -4.74934859]\n",
+      " [-0.0451404   0.03790983 -6.60802493]\n",
+      " [-0.01083025 -0.24819793  1.48966828]\n",
+      " [-0.06507117 -0.82708887  0.44576187]\n",
+      " [ 0.00088408  0.50992743  2.08598297]\n",
+      " [-0.05975117 -1.69409543  0.20420417]\n",
+      " [ 0.00236955 -0.08021841  1.71051878]\n",
+      " [-0.12713748 -1.4659735  -1.33778678]\n",
+      " [-0.92442489  0.9453913   4.60829234]\n",
+      " [ 0.10169439  0.82181395  2.3949869 ]\n",
+      " [ 0.04569649 -1.50029424 -0.31879171]\n",
+      " [ 0.04068874  0.30787033  1.97126052]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (res.sum(axis=0))\n",
+    "print (res.T.dot(Vertices))\n",
+    "print (res.T.dot(Vertices)/res.sum(axis=0)[...,np.newaxis])\n",
+    "\n",
+    "res2=res\n",
+    "\n",
+    "res2=res.clip(0,1) ### this is important, when estimate handle position later.\n",
+    "print (((1-res2.sum(axis=-1))**2).sum()/len(res2))\n",
+    "\n",
+    "print (res2.sum(axis=0))\n",
+    "print (res2.T.dot(Vertices))\n",
+    "print (res.T.dot(Vertices)/res.sum(axis=0)[...,np.newaxis])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -537,19 +679,13 @@
     "### plot handles corresponding to gt mixing weights, recovered mixing weights, and post-processed mixing weights.\n",
     "###\n",
     "\n",
-    "eps=1e-10\n",
-    "\n",
-    "# Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
-    "\n",
-    "## use recovered vertices instead.\n",
-    "recovered_vertices2=recover_vertices(res, vertices1, endmembers).reshape((len(vertices1),-1))\n",
-    "Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n",
-    "\n",
+    "eps=1e-30 ### avoid dividing by zero error\n",
     "\n",
     "gt_handle_position=gt_mixing_weights.T.dot(Vertices)/(gt_mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "recovered_handle_position=mixing_weights.T.dot(Vertices)/(mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "cliped_handle_position=mixing_weights_clip.T.dot(Vertices)/(mixing_weights_clip.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
-    "postprocessed_handle_position=res.T.dot(Vertices)/(res.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "postprocessed_handle_position=res2.T.dot(Vertices)/(res2.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "\n",
     "\n",
     "%matplotlib \n",
     "import matplotlib.pyplot as plt\n",
