tried cvxopt version vertices error objective function optimization

--- a/SparseWeights_CVXOPT-test - cow.ipynb
+++ b/SparseWeights_CVXOPT-test - cow.ipynb
@@ -312,7 +312,7 @@
     "\n",
     "start=time.time()\n",
     "\n",
-    "res=run(mesh0, mesh1_list, weights, endmembers, mixing_weights.ravel(), grad_zero_indices, initials=initials)\n",
+    "res=run(mesh0, mesh1_list, weights, endmembers, mixing_weights.ravel(), grad_zero_indices, initials=initials, choice=\"transformation_error\")\n",
     "\n",
     "res=res.reshape(mixing_weights.shape)\n",
     "end=time.time()\n",
@@ -509,20 +509,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
     "\n",
-    "# ## use recovered vertices instead.\n",
-    "# recovered_vertices2=recover_vertices(res2, vertices1, endmembers).reshape((len(vertices1),-1))\n",
-    "# Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n"
+    "## use recovered vertices instead.\n",
+    "recovered_vertices2=recover_vertices(res2, vertices1, endmembers).reshape((len(vertices1),-1))\n",
+    "Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -532,40 +532,40 @@
       "[ 670.2643694     0.63173762  739.75593732 9028.50360065   -3.90749162\n",
       "   -1.82023661    0.02634296    2.62539863   47.93159462    7.76160885\n",
       "   -2.70231202  589.26563627   -1.24419999  576.75633724   12.15167668]\n",
-      "[[   429.31993538  41632.21672683   1243.43819773]\n",
-      " [   -20.95998059     67.33280044    -77.56001653]\n",
-      " [-10557.87209067  14124.5383032      72.48711148]\n",
-      " [  6052.54305156 592211.38706927 -90829.74717631]\n",
-      " [     0.1390201    -241.36407584     42.7872104 ]\n",
-      " [    -5.69374269   -122.67365614     -9.58808229]\n",
-      " [    -6.72099491     11.44466598    -65.62574157]\n",
-      " [     3.33893239    138.90677982    -61.80645541]\n",
-      " [  -850.6024355     934.90011938   -281.03714754]\n",
-      " [    -2.73310973    488.27817857    -69.55625511]\n",
-      " [    21.57659549   -200.60490267    115.61099265]\n",
-      " [   779.60046416  38080.0898607    -937.02832599]\n",
-      " [    15.83802352    -64.55801391    134.19549983]\n",
-      " [   142.21781297  35592.92299028  -1954.2862935 ]\n",
-      " [    -7.57219066    760.75110214    -92.72084039]]\n",
+      "[[   676479.34981704   -431417.97732414     21503.8137028 ]\n",
+      " [     -687.87545346      1120.00041222      -192.61510175]\n",
+      " [ -1227436.62574041   1835023.70558569   5240164.03736247]\n",
+      " [-11096625.44884238  23148140.25531221  24088450.23492969]\n",
+      " [     4115.71521381     -8925.12642405    -10036.42163306]\n",
+      " [     1346.33686403     -3529.12752935     -4107.65641221]\n",
+      " [    -1013.8552239       1623.70769166     -2784.51020272]\n",
+      " [    -2269.02912945      4912.10380954      7206.19482757]\n",
+      " [   -81623.1529577     122312.20207824    317699.31117342]\n",
+      " [   -11003.95074331     21619.91848198     24688.58872559]\n",
+      " [     3630.43327626     -6828.85860072     -3896.34650231]\n",
+      " [   401097.22589322    -85139.9718273     134955.06533218]\n",
+      " [    14743.74640716    -21644.27465504    -20541.73320832]\n",
+      " [   235754.98478547    127922.56394706    360325.68205144]\n",
+      " [   -16420.012291       32829.23198319     37757.00270146]]\n",
       "5.801283923072726e-06\n",
       "[ 670.31686627    2.30990413  745.20796519 9029.10352366    0.00668651\n",
       "    0.03896628    1.47762904    2.62807882   53.76175071    7.83785233\n",
       "    0.8569483   589.72434434    1.55797296  576.79497586   12.19614884]\n",
-      "[[   428.6556259   41636.30200155   1242.17347211]\n",
-      " [   -13.99440167    170.25406167    -58.57134641]\n",
-      " [-10557.61830112  14489.25062224     37.15905944]\n",
-      " [  6046.25261573 592227.14926487 -90822.54736768]\n",
-      " [    -0.11496025      0.54148765      0.31500286]\n",
-      " [    -0.85303987      0.412374       -3.79591681]\n",
-      " [    -1.73124594     82.98725695    -93.17732688]\n",
-      " [     3.31781812    139.08608408    -61.72620569]\n",
-      " [  -843.80860455   1315.76080771   -328.74790751]\n",
-      " [    -2.37504117    492.90552199    -65.51919303]\n",
-      " [     6.37409883     38.15063615     25.17325626]\n",
-      " [   772.52618447  38088.11473025   -936.10512052]\n",
-      " [     8.84969282    110.62766717     73.92835708]\n",
-      " [   142.1192642   35596.00073435  -1955.49731351]\n",
-      " [    -7.41027126    763.48376013    -90.34329792]]\n"
+      "[[   676428.50696466   -431310.830379       21553.9706827 ]\n",
+      " [    -1480.78697231      3928.23581164      3138.33107026]\n",
+      " [ -1232637.67999607   1847010.00317355   5252347.52046848]\n",
+      " [-11095707.23965125  23147009.50974431  24089711.12936773]\n",
+      " [       63.3189788        -86.72714136       -48.62224489]\n",
+      " [       18.17389565        -2.36913121        26.35210804]\n",
+      " [     -952.41675657      2531.23951579       270.80549686]\n",
+      " [    -2242.94920318      4877.48116705      7180.18229513]\n",
+      " [   -86770.91481128    134415.74044726    330856.83571873]\n",
+      " [   -10104.77085229     20408.67973192     23627.42323321]\n",
+      " [     -191.53664489      1135.9830974       3031.5926079 ]\n",
+      " [   400303.53727836    -83961.31824917    138294.37405388]\n",
+      " [    12071.6708145     -15628.61322997    -14527.22901311]\n",
+      " [   235865.59777752    127791.68018293    360176.76630181]\n",
+      " [   -15895.73444937     32122.44336428     37145.60727323]]\n"
      ]
     }
    ],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
