--- a/SparseWeights_CVXOPT-test - cheburashka- objective_func2.ipynb
+++ b/SparseWeights_CVXOPT-test - cheburashka- objective_func2.ipynb
@@ -188,60 +188,49 @@
       "(6669, 44)\n",
       "(6669, 33)\n",
       "6669 11 11\n",
-      "use transformation error as obj\n",
+      "use vertices error as obj\n",
       "W_spatial 0.0\n",
       "     pcost       dcost       gap    pres   dres\n",
-      " 0: -5.5451e+04 -1.5044e+05  4e+05  2e+00  1e-14\n",
-      " 1: -5.4688e+04 -9.9552e+04  8e+04  3e-01  1e-14\n",
-      " 2: -5.2811e+04 -8.0798e+04  5e+04  1e-01  9e-15\n",
-      " 3: -5.1865e+04 -6.8277e+04  3e+04  6e-02  6e-15\n",
-      " 4: -5.1527e+04 -6.0842e+04  2e+04  3e-02  5e-15\n",
-      " 5: -5.1472e+04 -6.0051e+04  2e+04  3e-02  5e-15\n",
-      " 6: -5.1370e+04 -5.7435e+04  2e+04  3e-02  5e-15\n",
-      " 7: -5.0381e+04 -4.7021e+04  2e+04  2e-02  5e-15\n",
-      " 8: -4.6497e+04 -3.1541e+04  2e+04  2e-02  5e-15\n",
-      " 9: -4.3283e+04 -1.8770e+04  2e+04  2e-02  5e-15\n",
-      "10: -3.8548e+04 -3.5627e+03  2e+04  2e-02  5e-15\n",
-      "11: -3.6975e+04  1.5849e+04  3e+04  1e-02  5e-15\n",
-      "12: -3.5543e+04  3.4628e+04  3e+04  1e-02  5e-15\n",
-      "13: -3.1714e+04  6.6733e+04  4e+04  1e-02  5e-15\n",
-      "14: -2.6139e+04  1.2154e+05  5e+04  1e-02  5e-15\n",
-      "15: -2.0067e+04  1.9706e+05  7e+04  1e-02  5e-15\n",
-      "16: -1.2020e+04  2.7633e+05  8e+04  1e-02  5e-15\n",
-      "17:  3.8137e+03  3.8498e+05  1e+05  1e-02  5e-15\n",
-      "18:  3.5718e+04  5.3858e+05  2e+05  1e-02  5e-15\n",
-      "19:  1.2513e+05  7.9283e+05  2e+05  9e-03  6e-15\n",
-      "20:  3.1189e+05  1.0806e+06  3e+05  7e-03  6e-15\n",
-      "21:  9.0177e+05  1.4571e+06  3e+05  4e-03  6e-15\n",
-      "22:  1.0818e+06  1.4901e+06  3e+05  3e-03  5e-15\n",
-      "23:  1.1163e+06  1.4932e+06  3e+05  2e-03  5e-15\n",
-      "24:  1.2857e+06  1.5227e+06  2e+05  2e-03  5e-15\n",
-      "25:  1.4310e+06  1.5355e+06  2e+05  9e-04  5e-15\n",
-      "26:  1.5033e+06  1.5652e+06  1e+05  5e-04  5e-15\n",
-      "27:  1.5189e+06  1.6058e+06  1e+05  4e-04  5e-15\n",
-      "28:  1.6217e+06  1.7236e+06  7e+04  2e-04  9e-15\n",
-      "29:  1.7338e+06  1.7655e+06  3e+04  4e-05  4e-14\n",
-      "30:  1.7569e+06  1.7645e+06  2e+04  2e-05  5e-14\n",
-      "31:  1.7653e+06  1.7671e+06  1e+04  1e-05  3e-14\n",
-      "32:  1.7685e+06  1.7685e+06  1e+04  7e-06  2e-14\n",
-      "33:  1.7712e+06  1.7700e+06  8e+03  4e-06  2e-14\n",
-      "34:  1.7726e+06  1.7714e+06  5e+03  2e-06  2e-14\n",
-      "35:  1.7731e+06  1.7722e+06  3e+03  1e-06  1e-14\n",
-      "36:  1.7733e+06  1.7726e+06  2e+03  8e-07  1e-14\n",
-      "37:  1.7735e+06  1.7728e+06  2e+03  5e-07  1e-14\n",
-      "38:  1.7735e+06  1.7730e+06  1e+03  3e-07  1e-14\n",
-      "39:  1.7736e+06  1.7732e+06  8e+02  2e-07  1e-14\n",
-      "40:  1.7736e+06  1.7733e+06  5e+02  1e-07  1e-14\n",
-      "41:  1.7736e+06  1.7734e+06  3e+02  1e-07  1e-14\n",
-      "42:  1.7736e+06  1.7735e+06  2e+02  5e-08  1e-14\n",
-      "43:  1.7736e+06  1.7736e+06  6e+01  2e-08  1e-14\n",
-      "44:  1.7736e+06  1.7736e+06  3e+01  7e-09  1e-14\n",
-      "45:  1.7736e+06  1.7736e+06  2e+00  6e-10  1e-14\n",
-      "46:  1.7736e+06  1.7736e+06  5e-02  1e-11  1e-14\n",
+      " 0: -2.8761e+03 -9.9470e+04  4e+05  2e+00  7e-15\n",
+      " 1: -2.7635e+03 -4.5350e+04  6e+04  2e-01  7e-15\n",
+      " 2: -2.6737e+03 -1.4769e+04  2e+04  4e-02  5e-15\n",
+      " 3: -2.6326e+03 -1.0351e+04  1e+04  2e-02  4e-15\n",
+      " 4: -1.8412e+03 -5.8177e+03  1e+04  2e-02  4e-15\n",
+      " 5: -1.3445e+03 -1.4928e+03  1e+04  2e-02  4e-15\n",
+      " 6: -6.9847e+01  8.2048e+03  1e+04  1e-02  4e-15\n",
+      " 7:  1.0635e+03  1.8374e+04  1e+04  1e-02  4e-15\n",
+      " 8:  3.7459e+03  4.0795e+04  2e+04  1e-02  4e-15\n",
+      " 9:  2.6368e+04  1.0639e+05  4e+04  9e-03  8e-15\n",
+      "10:  9.3893e+04  1.6385e+05  4e+04  4e-03  9e-15\n",
+      "11:  1.1194e+05  1.6883e+05  4e+04  3e-03  8e-15\n",
+      "12:  1.2298e+05  1.7133e+05  4e+04  3e-03  8e-15\n",
+      "13:  1.4091e+05  1.7751e+05  3e+04  2e-03  7e-15\n",
+      "14:  1.5884e+05  1.8259e+05  3e+04  1e-03  7e-15\n",
+      "15:  1.7305e+05  1.8656e+05  2e+04  8e-04  7e-15\n",
+      "16:  1.8384e+05  1.8969e+05  2e+04  4e-04  8e-15\n",
+      "17:  1.8983e+05  1.9208e+05  1e+04  2e-04  8e-15\n",
+      "18:  1.9206e+05  1.9324e+05  1e+04  2e-04  8e-15\n",
+      "19:  1.9398e+05  1.9428e+05  8e+03  1e-04  8e-15\n",
+      "20:  1.9555e+05  1.9533e+05  6e+03  7e-05  9e-15\n",
+      "21:  1.9669e+05  1.9611e+05  5e+03  5e-05  9e-15\n",
+      "22:  1.9748e+05  1.9670e+05  4e+03  3e-05  1e-14\n",
+      "23:  1.9800e+05  1.9720e+05  3e+03  2e-05  1e-14\n",
+      "24:  1.9832e+05  1.9765e+05  2e+03  1e-05  1e-14\n",
+      "25:  1.9850e+05  1.9800e+05  1e+03  6e-06  1e-14\n",
+      "26:  1.9857e+05  1.9823e+05  7e+02  3e-06  1e-14\n",
+      "27:  1.9860e+05  1.9840e+05  4e+02  2e-06  1e-14\n",
+      "28:  1.9861e+05  1.9850e+05  2e+02  8e-07  1e-14\n",
+      "29:  1.9862e+05  1.9856e+05  1e+02  4e-07  9e-15\n",
+      "30:  1.9862e+05  1.9859e+05  4e+01  1e-07  1e-14\n",
+      "31:  1.9862e+05  1.9861e+05  1e+01  4e-08  1e-14\n",
+      "32:  1.9862e+05  1.9861e+05  2e+00  7e-09  1e-14\n",
+      "33:  1.9862e+05  1.9861e+05  1e+00  5e-09  1e-14\n",
+      "34:  1.9862e+05  1.9861e+05  7e-01  2e-09  1e-14\n",
+      "35:  1.9862e+05  1.9862e+05  9e-02  3e-10  1e-14\n",
       "Optimal solution found.\n",
       "optimal\n",
-      "using time:  454.29025197029114\n",
-      "2964.0456104602504\n"
+      "using time:  379.1843237876892\n",
+      "2964.4491744624142\n"
      ]
     }
    ],
@@ -254,7 +243,7 @@
     "\n",
     "start=time.time()\n",
     "\n",
-    "res=run(mesh0, mesh1_list, weights, endmembers, mixing_weights.ravel(), grad_zero_indices, initials=initials, choice=\"transformation_error\")\n",
+    "res=run(mesh0, mesh1_list, weights, endmembers, mixing_weights.ravel(), grad_zero_indices, initials=initials, choice=\"vertices_error\")\n",
     "\n",
     "res=res.reshape(mixing_weights.shape)\n",
     "end=time.time()\n",
@@ -273,14 +262,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.00000002  0.00000001  0.00000003  0.99999994 -0.          0.\n",
+      "[[ 0.00000054  0.00000119  0.00000025  0.99999801 -0.          0.\n",
       "   0.          0.          0.          0.         -0.        ]\n",
-      " [ 0.00000002  0.00000001  0.00000003  0.99999994 -0.          0.\n",
+      " [ 0.00000055  0.00000122  0.00000026  0.99999797 -0.          0.\n",
       "   0.          0.          0.          0.         -0.        ]\n",
-      " [ 0.00000002  0.00000001  0.00000003  0.99999994 -0.          0.\n",
+      " [ 0.00000056  0.00000127  0.00000026  0.99999791 -0.          0.\n",
       "   0.          0.          0.          0.         -0.        ]]\n",
-      "6.394437007279925e-19\n",
-      "1.2532906109401274e-10\n"
+      "1.1834638459918678e-18\n",
+      "6.257620992130864e-10\n"
      ]
     }
    ],
@@ -299,8 +288,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.736796635168749e-32\n",
-      "-5.112378641862516e-12 0.9999999529379339\n"
+      "1.6639757482626633e-32\n",
+      "-1.6213233323231443e-10 0.9999989648598264\n"
      ]
     }
    ],
@@ -318,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "219569744.02383474\n"
+      "219823453.7029981\n"
      ]
     }
    ],
@@ -480,20 +469,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 510.30639654  900.94359645 1236.87183864 3881.73763017   -0.00000003\n",
-      "   46.55706322    3.92935072   75.16731218   13.48681209    0.00000006\n",
-      "   -0.00000003]\n",
-      "[[ 302.35127973  302.51983013  272.23195734]\n",
-      " [ 423.26664495  305.3494635   456.1709636 ]\n",
-      " [ 479.12653169  469.1517114   632.47124279]\n",
-      " [2052.16423308 2309.31515058 1941.70806809]\n",
-      " [  -0.00000002   -0.00000002   -0.00000002]\n",
-      " [  21.694652     20.42466839   25.23357401]\n",
-      " [   1.83100979    0.70225373    2.08928039]\n",
-      " [  30.0842348    29.80691234   38.14404296]\n",
-      " [   8.8419219     6.73663773    6.06441693]\n",
-      " [   0.00000003    0.00000004    0.00000003]\n",
-      " [  -0.00000002   -0.00000002   -0.00000002]]\n"
+      "[1093.80852851  697.47119439  969.02710634 3769.03656377   -0.00000034\n",
+      "   46.53619119    3.5239815    75.16438107   14.4320531     0.00000064\n",
+      "   -0.00000016]\n",
+      "[[ 563.03900696  274.34147334  569.34354579]\n",
+      " [ 372.16492301  244.34966422  349.29156322]\n",
+      " [ 320.93580356  564.55802279  492.45708201]\n",
+      " [2000.38564797 2303.38659634 1891.250291  ]\n",
+      " [  -0.00000016   -0.00000016   -0.00000017]\n",
+      " [  21.48871645   19.78133056   25.34867692]\n",
+      " [   1.64932315    0.59801547    1.82936084]\n",
+      " [  30.25643578   29.56463681   38.15643906]\n",
+      " [   9.44065098    7.42688807    6.43658718]\n",
+      " [   0.00000036    0.00000047    0.00000032]\n",
+      " [  -0.00000008   -0.00000008   -0.00000008]]\n"
      ]
     }
    ],
@@ -519,17 +508,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.59248969 0.59281998 0.53346766]\n",
-      " [0.46980371 0.33892184 0.50632577]\n",
-      " [0.38736959 0.37930503 0.51134744]\n",
-      " [0.52867155 0.59491789 0.50021621]\n",
-      " [0.49590905 0.50823845 0.50626187]\n",
-      " [0.46597982 0.43870182 0.54199239]\n",
-      " [0.46598279 0.17872004 0.53171135]\n",
-      " [0.40023029 0.39654088 0.50745519]\n",
-      " [0.65559762 0.49949815 0.44965533]\n",
-      " [0.52889088 0.62805385 0.49621531]\n",
-      " [0.49552674 0.5163536  0.50640675]]\n",
+      "[[0.51475098 0.25081307 0.52051482]\n",
+      " [0.53359182 0.35033657 0.50079712]\n",
+      " [0.33119383 0.58260292 0.50819743]\n",
+      " [0.53074191 0.61113405 0.50178614]\n",
+      " [0.47029789 0.47900427 0.50469833]\n",
+      " [0.46176354 0.42507412 0.54470889]\n",
+      " [0.46802832 0.16969881 0.51911761]\n",
+      " [0.40253688 0.39333307 0.5076399 ]\n",
+      " [0.6541447  0.51461064 0.44599248]\n",
+      " [0.56725945 0.73824709 0.50372869]\n",
+      " [0.46481661 0.46449884 0.49917512]]\n",
       "Using matplotlib backend: MacOSX\n"
      ]
     }
